--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.12.0",
     "axios": "^1.13.5",
     "expo": "~54.0.33",
+    "expo-crypto": "~15.0.8",
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
