--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.563.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
