--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "@expo/metro-config": "~54.0.14",
     "@react-navigation/bottom-tabs": "^7.13.0",
     "@react-navigation/native": "^7.1.28",
@@ -16,6 +17,7 @@
     "axios": "^1.13.5",
     "expo": "~54.0.33",
     "expo-crypto": "~15.0.8",
+    "expo-font": "~14.0.11",
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
