--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-crypto": "~15.0.8",
     "expo-font": "~14.0.11",
     "expo-print": "~15.0.8",
+    "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
